--- a/src/index.html
+++ b/src/index.html
@@ -19,46 +19,46 @@
             <div class="container">
                 <nav class="flex items-center justify-between lg:space-x-10 lg:py-24px max-lg:py-16px">
                     <div class="flex items-center justify-between lg:space-x-60px">
-                        <a href="#" class="max-w-150px">
+                        <a href="#hero" class="smooth-scroll max-w-150px">
                             <img src="assets/images/logo-dark.png" alt="" />
                         </a>
                         <ul class="lg:flex lg:items-center lg:space-x-8 max-lg:hidden">
                             <li class="relative">
                                 <a
-                                    href="#"
-                                    class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                    href="#process"
+                                    class="smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                                 >
                                     Ablauf
                                 </a>
                             </li>
                             <li class="relative">
                                 <a
-                                    href="#"
-                                    class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                    href="#our-startups"
+                                    class="smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                                 >
                                     Unsere Startups
                                 </a>
                             </li>
                             <li class="relative">
                                 <a
-                                    href="#"
-                                    class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                    href="#code4equity"
+                                    class="smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                                 >
                                     Code4Equity
                                 </a>
                             </li>
                             <li class="relative">
                                 <a
-                                    href="#"
-                                    class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                    href="#additionalServices"
+                                    class="smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                                 >
                                     Unsere Leistungen
                                 </a>
                             </li>
                             <li class="relative">
                                 <a
-                                    href="#"
-                                    class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                    href="#faq"
+                                    class="smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                                 >
                                     FAQ
                                 </a>
@@ -94,40 +94,40 @@
                     <ul class="divide-y divide-accent-100 border-y border-y-accent-100 mt-12">
                         <li class="relative py-3 px-4">
                             <a
-                                href="#"
-                                class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                href="#process"
+                                class="mobile-nav-link smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 Ablauf
                             </a>
                         </li>
                         <li class="relative py-3 px-4">
                             <a
-                                href="#"
-                                class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                href="#our-startups"
+                                class="mobile-nav-link smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 Unsere Startups
                             </a>
                         </li>
                         <li class="relative py-3 px-4">
                             <a
-                                href="#"
-                                class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                href="#code4equity"
+                                class="mobile-nav-link smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 Code4Equity
                             </a>
                         </li>
                         <li class="relative py-3 px-4">
                             <a
-                                href="#"
-                                class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                href="#additionalServices"
+                                class="mobile-nav-link smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 Unsere Leistungen
                             </a>
                         </li>
                         <li class="relative py-3 px-4">
                             <a
-                                href="#"
-                                class="lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
+                                href="#faq"
+                                class="mobile-nav-link smooth-scroll lg:text-14px max-lg:text-12px relative transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 FAQ
                             </a>
@@ -137,7 +137,7 @@
             </div>
         </header>
         <main class="lg:space-y-16 max-lg:space-y-10">
-            <section class="relative lg:pt-150px max-lg:pt-90px">
+            <section id="hero" class="relative lg:pt-150px max-lg:pt-90px">
                 <div class="container">
                     <div
                         class="relative z-2 flex lg:items-stretch max-lg:flex-col-reverse max-w-800px w-full max-lg:text-center"
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </section>
-            <section class="relative overflow-hidden">
+            <section id="process" class="relative overflow-hidden">
                 <div class="container">
                     <div class="relative">
                         <h2 class="lg:text-45px max-lg:text-34px font-semibold font-primary">
@@ -364,7 +364,7 @@
                     </div>
                 </div>
             </section>
-            <section class="">
+            <section id="code4equity">
                 <div class="container">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:gap-12">
                         <div class="max-md:mb-5">
@@ -471,7 +471,7 @@
                             We also work for pure payment without a share fee. We will be happy to prepare an individual
                             offer on request.
                         </p>
-                        <h3 class="text-2xl font-semibold">Additional Services</h3>
+                        <h3 id="additionalServices" class="text-2xl font-semibold">Additional Services</h3>
                         <p>Explore our tailored solutions, and let's create a partnership that drives success.</p>
                     </div>
                     <div
@@ -523,7 +523,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="our-startups">
                 <div class="container">
                     <h2
                         class="capitalize lg:text-30px max-lg:text-25px pb-2 font-semibold font-primary lg:mb-7 max-lg:mb-5 text-center"
@@ -597,7 +597,7 @@
                     </div>
                 </div>
             </section>
-            <section class="relative">
+            <section id="faq" class="relative">
                 <div class="container">
                     <h2 class="capitalize lg:text-45px max-lg:text-34px font-semibold font-primary text-center">FAQ</h2>
                     <div class="grid divide-y divide-neutral-200 max-w-2xl mx-auto mt-5">
@@ -901,7 +901,7 @@
                     </ul>
                 </div>
                 <div class="text-center py-4 border-t border-t-accent-100 border-opacity-60">
-                    &copy;2023 - GUSH Holding Ltd | All Rights Reserved
+                    &copy;2023 - DataKraft | All Rights Reserved
                 </div>
             </div>
         </footer>
