--- a/src/en/index.html
+++ b/src/en/index.html
@@ -531,7 +531,7 @@
                         Own Startups
                     </h2>
                     <div class="flex flex-wrap justify-center -mx-11px">
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
@@ -540,7 +540,7 @@
                                 />
                             </div>
                         </div>
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
@@ -549,7 +549,7 @@
                                 />
                             </div>
                         </div>
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
@@ -558,7 +558,7 @@
                                 />
                             </div>
                         </div>
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
@@ -567,7 +567,7 @@
                                 />
                             </div>
                         </div>
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
@@ -585,7 +585,7 @@
                                 />
                             </div>
                         </div>
-                        <div class="overflow-hidden w-full w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
+                        <div class="overflow-hidden w-1/2 md:w-1/3 lg:w-1/4 mb-5 px-10px">
                             <div class="relative overflow-hidden">
                                 <img
                                     class="shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300"
