--- a/src/index.html
+++ b/src/index.html
@@ -461,9 +461,7 @@
                     </div>
                 </div>
             </section>
-            <section
-                class="!mt-0 bg-gradient-to-b from-rgb(var(--dark-100)) via-rgb(var(--dark-200)) to-rgb(var(--dark-200)) text-white lg:py-12 max-lg:py-8"
-            >
+            <section id="additionalServices" class="relative">
                 <div class="container">
                     <div class="space-y-2 lg:max-w-600px lg:mx-auto text-center">
                         <h3 class="lg:text-30px max-lg:text-25px font-semibold font-primary">Don't Give Up Shares?</h3>
