--- a/src/index.html
+++ b/src/index.html
@@ -659,7 +659,7 @@
                     </div>
                 </div>
             </section>
-            <section class="relative">
+            <section id="additionalServices" class="relative">
                 <div class="container">
                     <div class="flex lg:items-stretch max-lg:flex-col">
                         <div class="lg:flex lg:flex-col lg:max-w-170px lg:min-w-170px lg:space-y-4 max-lg:hidden">
