--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,6 @@
                                 Vis-a-Vis Ventures is a company builder for digital business models
                             </p>
                             <button
-                                data-aos="fade-up"
                                 class="lg:text-65px max-lg:text-35px lg:-translate-x-60px lg:-rotate-45 transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 <i class="fa-solid fa-arrow-down"></i>
@@ -342,7 +341,6 @@
                                 What our customers say about solutions
                             </p>
                             <button
-                                data-aos="fade-up"
                                 class="lg:!mt-auto lg:text-65px max-lg:text-35px lg:-translate-x-60px lg:translate-y-33px lg:-rotate-45 transition-opacity duration-300 ease-linear hover:opacity-80"
                             >
                                 <i class="fa-solid fa-arrow-down"></i>
@@ -684,28 +682,40 @@
                             <div
                                 class="grid max-sm:gap-4 sm:gap-5 sm:grid-cols-2 mm-sm-md:grid-cols-3 lg:grid-cols-4 lg:mt-10px max-lg:mt-8px"
                             >
-                                <div
-                                    data-aos="fade-up"
-                                    class="px-6 py-4 transition-colors duration-200 bg-dark-300 flex flex-col"
-                                >
+                                <div class="px-6 py-4 transition-colors duration-200 bg-dark-300 flex flex-col">
                                     <p
+                                        data-aos="fade-up"
+                                        data-aos="fade-up"
+                                        data-aos="fade-up"
                                         class="text-lg font-medium text-gray-100"
                                         data-i18n="additionalServices.card1.title"
                                     ></p>
-                                    <div class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
+                                    <div
+                                        data-aos="fade-up"
+                                        data-aos="fade-up"
+                                        class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2"
+                                    >
                                         <div
+                                            data-aos="fade-up"
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card1.description1"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card1.description2"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300 capitalize"
                                             data-i18n="additionalServices.card1.duration1"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300 capitalize"
                                             data-i18n="additionalServices.card1.duration2"
                                         ></div>
@@ -716,19 +726,23 @@
                                     class="px-6 py-4 transition-colors duration-200 bg-dark-300 flex flex-col"
                                 >
                                     <p
+                                        data-aos="fade-up"
                                         class="text-lg font-medium text-gray-100"
                                         data-i18n="additionalServices.card2.title"
                                     ></p>
-                                    <div class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
+                                    <div data-aos="fade-up" class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card2.description1"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card2.description2"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300 capitalize"
                                             data-i18n="additionalServices.card2.duration1"
                                         ></div>
@@ -739,19 +753,22 @@
                                     class="px-6 py-4 transition-colors duration-200 bg-dark-300 flex flex-col"
                                 >
                                     <p
+                                        data-aos="fade-up"
                                         class="text-lg font-medium text-gray-100"
                                         data-i18n="additionalServices.card3.title"
                                     ></p>
-                                    <div class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
+                                    <div data-aos="fade-up" class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
                                         <div
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card3.description1"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card3.description2"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300 capitalize"
                                             data-i18n="additionalServices.card3.duration1"
                                         ></div>
@@ -762,19 +779,23 @@
                                     class="px-6 py-4 transition-colors duration-200 bg-dark-300 flex flex-col"
                                 >
                                     <p
+                                        data-aos="fade-up"
                                         class="text-lg font-medium text-gray-100"
                                         data-i18n="additionalServices.card4.title"
                                     ></p>
-                                    <div class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
+                                    <div data-aos="fade-up" class="lg:mt-3 lg:space-y-3 max-lg:space-y-2 mb-2">
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card4.description1"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300"
                                             data-i18n="additionalServices.card4.description2"
                                         ></div>
                                         <div
+                                            data-aos="fade-up"
                                             class="text-13px text-gray-300 capitalize"
                                             data-i18n="additionalServices.card4.duration1"
                                         ></div>
@@ -891,7 +912,8 @@
                             <div class="grid divide-y divide-neutral-200 border-y border-y-neutral-200 max-w-2xl mt-5">
                                 <div data-aos="fade-up" class="py-4">
                                     <button
-                                        class="lg:text-23px max-lg:text-18px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
+                                        data-aos="fade-up"
+                                        class="lg:text-16px max-lg:text-14px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
                                     >
                                         <span data-i18n="faq.q1"></span>
                                         <span class="transition tab-arrow-down">
@@ -910,13 +932,17 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="tab-body h-0 transition-height duration-300 overflow-hidden">
+                                    <div
+                                        data-aos="fade-up"
+                                        class="tab-body h-0 transition-height duration-300 overflow-hidden"
+                                    >
                                         <p class="text-light-100 mt-3" data-i18n="faq.ans1"></p>
                                     </div>
                                 </div>
                                 <div data-aos="fade-up" class="py-4">
                                     <button
-                                        class="lg:text-23px max-lg:text-18px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
+                                        data-aos="fade-up"
+                                        class="lg:text-16px max-lg:text-14px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
                                     >
                                         <span data-i18n="faq.q2"></span>
                                         <span class="transition tab-arrow-down">
@@ -935,13 +961,17 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="tab-body h-0 transition-height duration-300 overflow-hidden">
+                                    <div
+                                        data-aos="fade-up"
+                                        class="tab-body h-0 transition-height duration-300 overflow-hidden"
+                                    >
                                         <p class="text-light-100 mt-3" data-i18n="faq.ans2"></p>
                                     </div>
                                 </div>
                                 <div data-aos="fade-up" class="py-4">
                                     <button
-                                        class="lg:text-23px max-lg:text-18px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
+                                        data-aos="fade-up"
+                                        class="lg:text-16px max-lg:text-14px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
                                     >
                                         <span data-i18n="faq.q3"></span>
                                         <span class="transition tab-arrow-down">
@@ -960,13 +990,17 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="tab-body h-0 transition-height duration-300 overflow-hidden">
+                                    <div
+                                        data-aos="fade-up"
+                                        class="tab-body h-0 transition-height duration-300 overflow-hidden"
+                                    >
                                         <p class="text-light-100 mt-3" data-i18n="faq.ans3"></p>
                                     </div>
                                 </div>
                                 <div data-aos="fade-up" class="py-4">
                                     <button
-                                        class="lg:text-23px max-lg:text-18px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
+                                        data-aos="fade-up"
+                                        class="lg:text-16px max-lg:text-14px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
                                     >
                                         <span data-i18n="faq.q4"></span>
                                         <span class="transition tab-arrow-down">
@@ -985,13 +1019,17 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="tab-body h-0 transition-height duration-300 overflow-hidden">
+                                    <div
+                                        data-aos="fade-up"
+                                        class="tab-body h-0 transition-height duration-300 overflow-hidden"
+                                    >
                                         <p class="text-light-100 mt-3" data-i18n="faq.ans4"></p>
                                     </div>
                                 </div>
                                 <div data-aos="fade-up" class="py-4">
                                     <button
-                                        class="lg:text-23px max-lg:text-18px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
+                                        data-aos="fade-up"
+                                        class="lg:text-16px max-lg:text-14px tab-btn w-full flex justify-between items-center font-medium cursor-pointer list-none text-left"
                                     >
                                         <span data-i18n="faq.q5"></span>
                                         <span class="transition tab-arrow-down">
@@ -1010,7 +1048,10 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="tab-body h-0 transition-height duration-300 overflow-hidden">
+                                    <div
+                                        data-aos="fade-up"
+                                        class="tab-body h-0 transition-height duration-300 overflow-hidden"
+                                    >
                                         <p class="text-light-100 mt-3" data-i18n="faq.ans5"></p>
                                     </div>
                                 </div>
@@ -1082,9 +1123,8 @@
                                     <button
                                         data-aos="fade-up"
                                         class="flex items-center justify-center gap-3 lg:text-20px max-lg:text-17px group transition-opacity duration-300 ease-linear hover:opacity-80"
-                                        data-i18n="contact.form.button.send"
                                     >
-                                        Send
+                                        <span data-i18n="contact.form.button.send"></span>
                                         <i
                                             class="fa-solid fa-arrow-right-long transition-transform duration-300 ease-linear group-hover:translate-x-1"
                                         ></i>
